--- a/kakao/pom.xml
+++ b/kakao/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>study.page</groupId> <!-- 최상위 패키지 1, 2레벨 -->
 	<artifactId>kakao</artifactId> <!-- 최상위 패키지 3레벨 == context-path -->
 	<name>kakao</name> <!-- 프로젝트 명 -->
-	<packaging>war</packaging>  <!-- 배포 형식 -->
+	<packaging>war</packaging>  <!-- 배포 형식 설정-->
 	<version>1.0.0--BUILD-SNAPSHOT</version>
 
 	<!-- properties : 메이븐이 적용된 프로젝트에서 공통적으로 사용할 값을 작성하는 태그(전연 변수) -->
