--- a/kakao/pom.xml
+++ b/kakao/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion> <!-- Maven 2 버전 이후 POM의 경우 항상 4.0.0 -->
-	<groupId>study.page</groupId> <!-- 최상위 패키지 1, 2레벨 -->
+	<groupId>study.page</groupId> <!-- 최상위 패키지 1,2레벨 -->
 	<artifactId>kakao</artifactId> <!-- 최상위 패키지 3레벨 == context-path -->
 	<name>kakao</name> <!-- 프로젝트명작성 -->
 	<packaging>war</packaging>  <!-- 배포 형식 설정-->
